
    o   More general reorder.default() replaces functionality of
        reorder.factor() and reorder.character().

    o	The function aspell() has been added to provide an interface to
    	the Aspell spell-checker.

    o	Filters RdTextFilter() and SweaveTeXFilter() have been added
	to the tools package to provide support for aspell() or other
	spell checkers.

    o	contr.sum() etc gain an argument 'sparse = FALSE' which allows
	sparse matrices to be returned, using package 'Matrix'.


Rd HELP FILE CHANGES

    o	An experimental tag \Sexpr has been added to Rd files, to
	evaluate expressions at build, install, or render time.
	(Currently render time evaluation is not supported.)

    o	The parse_Rd() parser has been made more tolerant of coding
	errors in Rd files:  now all syntax errors are reported as
	warnings, and an attempt is made to continue parsing.

    o	parse_Rd() now has an argument 'fragment' (default FALSE) to
	accept small fragments of Rd files (so that \Sexpr can output
	Rd code which is then parsed).

    o	There have been various bug fixes and code reorganization in
        the Rd renderers Rd2HTML, Rd2latex, Rd2txt, and Rd2ex.


DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.

    o	png(type="cairo1") is defunct: the value is no longer recognized.


INSTALLATION

    o	cairo >= 1.2 is now required (1.2.0 was released in July 2006)
	for cairo-based graphics devices (which remain optional).

    o	A suitable iconv() is now required: support for
	--without-iconv has been withdrawn (it was deprecated in R 2.5.0).


INTERNATIONALIZATION

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.

	There is support for the use of 'dngettext' for C-level
	translations in packages: see 'Writing R Extensions'.


BUG FIXES

    o	Assigning an extra 0-length column to a data frame by